FIX car tile text and icon alignment for apple-os devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -292,6 +292,7 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    align-items: center;
 }
 
 .car-tile:hover {
